@@ -26,6 +26,7 @@ ChangeLog for Matrix Brandy - as forked from Sourceforge after V1.20.1
 - BASIC: Limit the recursion depth of RUN.
 - BASIC: Don't choke if a numeric DATA element contains a comma (e.g.
   multi-dimensional array member or FN call)
+- BASIC: Clear variable stubs if a DIM fails, and after CLEAR HIMEM.
 - Graphics: Fixed multiple problems with VDU24, RECTANGLE FILL, MOUSE
   and the plot_pixel() primitive, primarily to do with the oddball MODE 22.
   Thanks to Michael Fairbank for identifying and assisting with fixing this.
